tests/NormalTests/paczka1/small_fuzzy/48261425.err
Error in line 2: jhRWAmD S988 22,3
Error in line 4: jhRWAmD A982 86,6
Error in line 1: Iqb5IhfOJ1u A982 99,3
Error in line 8: jhRWAmD S988 20,8
